<resources>
    <string name="app_name">SimbirBonus</string>

    <string name="simbirsoft_text">SimbirSoft</string>

    <string name="auth_title">Авторизация</string>
    <string name="login_label">Логин</string>
    <string name="password_label">Пароль</string>
    <string name="login_button_text">Войти</string>

    <string name="timeline_toolbar_description">В компании</string>
    <string name="timeline_toolbar_icon_description">Забрать</string>

    <string name="timeline_text">Таймлайн</string>
    <string name="bonuses_text">Плюшки</string>
    <string name="profile_text">Профиль</string>

    <string name="things_chip_text">Мерч</string>
    <string name="activities_chip_text">Активности</string>
    <string name="bonuses_chip_text">Бонусы</string>

    <string name="want_this_bonus_text">Получить бонус</string>
    <string name="want_this_merch_text">Получить</string>
    <string name="join_activity_text">Участвовать</string>

    <string name="email_body_text">Сотрудник %1$s хочет %2$s</string>

    <string name="activity_text">принять участие в активности </string>
    <string name="merch_text">получить мерч </string>
    <string name="bonus_text">получить годовой бонус </string>

    <string name="profile_about">Обо мне</string>
    <string name="profile_achievements">Достижения</string>
    <string name="profile_joined_from">с %s</string>
    <string name="profile_city">Город</string>
    <string name="profile_in_company">В компании</string>
    <string name="profile_size">Размер</string>
    <string name="profile_roles">Роли в компании</string>

    <string name="popup_bonus_description">Тебя уже ждет новый бонус, скорее получи его.</string>
    <string name="popup_bonus_title">1 год в SimbirSoft!</string>
    <string name="popup_bonus_congratulations">Поздравляем!</string>

    <string name="incorrect_years_at_company_text">Годовой бонус могут получить только сотрудники после 1 года в компании</string>
    <string name="incorrect_available_bonuses_text">TimeLineFragment</string>
    <string name="bonus_request_sent_text">Отправьте заявку на бонус!</string>
    <string name="error_text">Произошла ошибка!</string>

    <string name="login_error">Не удалось войти</string>
    <string name="auth_needed">Введите данные для авторизации</string>

    <plurals name="tasks_text">
        <item quantity="one">%1$d задание</item>
        <item quantity="two">%1$d задания</item>
        <item quantity="few">%1$d задания</item>
        <item quantity="many">%1$d заданий</item>
        <item quantity="other">%1$d задания</item>
    </plurals>
</resources>