<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background"
    tools:context=".presentation.view.login.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/simbirsoftTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextStyle.Size30.Medium"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/simbirsoft_text"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/simbirsoftTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextStyle.Size40.Medium"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/app_name"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fieldsAuthLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/dialog_fragment_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/authTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/auth_title"
            android:textAppearance="@style/TextStyle.Size30.Medium"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="false"
            android:background="@drawable/edit_text_shape"
            android:ellipsize="end"
            android:hint="@string/login_label"
            android:inputType="none"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:singleLine="true"
            android:textAppearance="@style/TextStyle.Size14.Medium"
            android:textColor="@color/anotherGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authTitle" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="false"
            android:background="@drawable/edit_text_shape"
            android:ellipsize="end"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:singleLine="true"
            android:textAppearance="@style/TextStyle.Size14.Medium"
            android:textColor="@color/anotherGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginEditText" />

        <com.simbirsoft.bonus.presentation.view.custom.ButtonView
            android:id="@+id/loginButon"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="40dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:buttonTitle="@string/login_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>